deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: himani-deployment
  namespace: himani-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: himanisharma
        image: himanisharma4/himanihub1:1.0
        ports:
        - containerPort: 8000
