ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: himani-app
spec:
  ingressClassName: nginx
  rules:
   - host: himani-sharma.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: himani-service
            port:
              number: 80
